--- a/website/website.html
+++ b/website/website.html
@@ -1,5 +1,5 @@
 <style>
-  @import url(test1.css);
+  @import url(website.css);
   </style>
 <div data-tabs="1" id="ivvj">
   <nav data-tab-container="1" id="ic9j" class="tab-container">
